# Atlas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Atlas/: CMakeLists.txt  TODO
Atlas/src/: Atlas.h  atpch.cpp  atpch.h
Atlas/src/Atlas/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Atlas/src/Atlas/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Atlas/src/Atlas/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Atlas/src/Atlas/Platform/MacOS/: MacOSInput.cpp  MacOSInput.h  MacOSWindow.cpp  MacOSWindow.h
Atlas/src/Atlas/Platform/Metal/: ImGuiMetalRenderer.h  ImGuiMetalRenderer.mm  MetalBuffer.cpp  MetalBuffer.h  MetalContext.h  MetalContext.mm  MetalImGuiLayer.h  MetalImGuiLayer.mm  MetalRendererAPI.cpp  MetalRendererAPI.h  MetalRendererAPI.mm  MetalVertexArray.cpp  MetalVertexArray.h
Atlas/src/Atlas/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Atlas/src/Atlas/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
examples/PacMan/: CMakeLists.txt
examples/PacMan/src/: PacManApp.cpp
